# solo-desktop

./: .env.example  .gitignore  COMPACT_WINDOW_FEATURE.md  LICENSE  README.md  makefile  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js  validate_feature.sh  vitest.config.ts
.github/ISSUE_TEMPLATE/: README.md  bug_report.yml  config.yml  feature_request.yml  task.yml
.github/workflows/: ci.yml  github-actions-release.yml
src/: app.vue
src-tauri/: Cargo.toml  build.rs  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/data/: solo.db
src-tauri/icons/: icon.icns
src-tauri/migration/: Cargo.toml
src-tauri/migration/src/: lib.rs  m20241216_114851_create_table_documents.rs  m20241216_114851_create_table_japanese_holiday.rs  m20241216_114851_create_table_todo_categories.rs  m20241216_114851_create_table_todo_items.rs  m20241216_114851_create_table_users.rs  m20241216_114851_create_table_work_settings.rs  m20241216_114851_create_table_work_times.rs  m20241217_000000_add_status_column_to_todo_items.rs  m20241222_000000_add_priority_to_todo_items.rs  m20250103_000000_add_user_id_to_todo_items.rs
src-tauri/src/: data.rs  lib.rs  main.rs  tauri_command.rs  test_utils.rs
src-tauri/src/entities/: documents.rs  japanese_holiday.rs  mod.rs  prelude.rs  todo_categories.rs  todo_items.rs  users.rs  work_settings.rs  work_times.rs
src-tauri/src/helper/: import_csv.rs  mod.rs
src-tauri/src/repositories/: database.rs
src-tauri/template/: temp_workreport.xlsx
src-tauri/tests/: .gitignore  Cargo.toml  README.md  standalone_user_tests.rs  user_tests.rs
src-tauri/tests/src/: backend_tests.rs  lib.rs  todo_tests.rs  work_time_tests.rs
src/assets/: colors.ts
src/components/: AppAlert.vue  CommonCheckbox.vue  CommonInput.vue  CommonSelect.vue  CommonTextarea.vue  CommonTimeInput.vue  CommonToggle.vue  CompactAttendance.vue  CompactTodo.vue  ConfirmDialog.vue  CustomDateTimePicker.vue  CustomSelect.vue  EditWorkTimeDialog.vue  Header.vue  Loading.vue  MemoDialog.vue  ResizeWindowButton.vue  TaskDetailDialog.vue  ThemeToggle.vue  TimeInput.vue
src/components/report/: WorkTimeChart.vue
src/components/todo/: CustomDialog.vue
src/components/worktime/: ExportFileDialog.vue
src/composables/: useTheme.ts  useTimer.ts
src/constants/: separetor.ts
src/functions/: date.ts  reportData.ts  todo.ts
src/layouts/: compact.vue  default.vue  todo.vue
src/models/: japaneseHoliday.ts  monthForWork.ts  productivitySession.ts  todo.ts  user.ts  workSetting.ts  workTime.ts
src/pages/: add-user.vue  addUser.vue  index.vue
src/pages/[id]/: index.vue  report.vue  work-time-list.vue  workTimeList.vue
src/pages/[id]/settings/: index.vue  (+2 more)
src/repositories/: file.ts  jsonConverter.ts
src/repositories/tauri-commands/: japaneseHoliday.ts  todoCategory.ts  todoItem.ts  user.ts  workTime.ts  workTimeSetting.ts
tests/unit/: ResizeWindowButton.test.ts
tests/unit/functions/: reportData.test.ts
tests/unit/models/: japaneseHoliday.spec.ts  monthForWork.spec.ts  user.spec.ts  workSetting.spec.ts  workTime.spec.ts
(+15 files in other folders)
