[package]
name = "solo"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "solo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "solo"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }

[dependencies]
tauri = { version = "2", features = [], optional = true }
tauri-plugin-opener = { version = "2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3.28"
chrono = "0.4.39"
sea-orm = { version = "^1.0.0", features = [ "sqlx-sqlite", "runtime-async-std-native-tls", "macros", "chrono" ] }
tauri-plugin-log = { version = "2", optional = true }
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
encoding_rs = "0.8"
encoding_rs_io = "0.1"
tauri-plugin-fs = { version = "2", optional = true }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = ["tauri-build", "tauri", "tauri-plugin-opener", "tauri-plugin-log", "tauri-plugin-fs"]
tauri-features = ["tauri-build", "tauri", "tauri-plugin-opener", "tauri-plugin-log", "tauri-plugin-fs"]
