[package]
name = "solo-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = { version = "^1.0.0", features = [ "sqlx-sqlite", "runtime-async-std-native-tls", "macros", "chrono" ] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4.39"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4"